<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">分级基金</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="fund_a">分级A</string>
	<string name="fund_b">分级B</string>
	<string name="fund_m">分级套利</string>
	<string name="hangqing">行情</string>
	<string name="zixuan">自选</string>
	<string name="luntan">论坛</string>
	<string name="search_hint">请输入代码或者名称</string>
	<string name="filter">筛选</string>
	<string name="code">代码</string>
	<string name="search">搜索</string>
	<string name="url">https://www.jisilu.cn/m/explore/</string>
	<string name="url1">https://www.jisilu.cn/m/login/url-/</string>
	<string name="url2">https://www.jisilu.cn/m/</string>
	<string name="url3">https://www.jisilu.cn/m/explore</string>
	<string name="sina_interface">http://hq.sinajs.cn/list=</string>
	<string name="current">现价</string>
	<string name="rising">涨幅</string>
	<string name="trademoney">成交额</string>
	<string name="discount">折价率</string>
	<string name="corrected_intrest">修正利率</string>
	<string name="intrest_rule">利率规则</string>
	<string name="intrest_term">期限</string>
	<string name="index">指数</string>
	<string name="index_name">指数名称</string>
	<string name="index_rising">指数涨幅</string>
	<string name="sh">上海：0%</string>
	<string name="sz">深圳：0%</string>
	<string name="cy">创业：0%</string>
	<string name="intrest3_0">+3.0%</string>
	<string name="intrest3_2">+3.2%</string>
	<string name="intrest3_5">+3.5%</string>
	<string name="intrest4_0">+4.0%</string>
	<string name="intrest4_5">+4.5%</string>
	<string name="intrest5_0">+5.0%</string>
	<string name="others">其他</string>
	<string name="refresh_time">刷新周期</string>
	<string name="refresh_mode">刷新模式</string>
	<string name="money_unit">万元</string>
	<string name="save">保存</string>
	<string name="price_leverage">价格杠杆</string>
	<string name="sprice_discount">卖一折价</string>
	<string name="bprice_discount">买一折价</string>
	<string name="name">名称</string>
	<string name="sprice">卖一</string>
	<string name="bprice">买一</string>
	<string name="detail">详情</string>
	<string name="addto_self_choose">加入自选</string>
	<string name="deletefrom_self_choose">删除自选</string>
	<string name="jjjz">净值</string>
	<string name="purchase_cost">申购费率</string>
	<string name="redeem_cost">赎回费率</string>
	<string name="statement">本APP发布此信息目的在于传播更多信息，与本APP立场无关。本APP不保证该信息（包括但不限于文字、数据及图表）全部或者部分内容的准确性、真实性、完整性、有效性、及时性、原创性等。相关信息并未经过本APP证实，不对您构成任何投资建议，据此操作，风险自担。</string>
	
</resources>
