<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
<LinearLayout 
		 android:layout_width="match_parent"
         android:layout_height="41dp"
		 android:orientation="vertical" 
		 android:showDividers="end|beginning">
		    <LinearLayout
		        android:id="@+id/scrollbar_layout_z"
		        android:layout_width="match_parent"
		        android:layout_height="40dp"
		        android:orientation="horizontal"
		        android:showDividers="end|beginning" >
		      
		            <RadioGroup
		                android:id="@+id/sort_radio_group_z"
                        android:layout_width="match_parent"
                         android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:showDividers="end" >

                        <RadioButton
                            android:id="@+id/fund_z_code_button"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/code"
                            android:textColor="#850" 
                            android:checked="true" 
		        			android:button="@null"
		            		android:drawableRight="@drawable/sort_radio_button"/>

                        <RadioButton
                            android:id="@+id/fund_z_current_button"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/current"
                            android:textColor="#850" 
                            android:checked="true" 
		           			android:button="@null"
		            		android:drawableRight="@drawable/sort_radio_button"/>

                        <RadioButton
                            android:id="@+id/fund_z_rising_button"
                           android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/rising"
                            android:textColor="#850" 
                            android:checked="true" 
		           			android:button="@null"
		            		android:drawableRight="@drawable/sort_radio_button"/>

                        <RadioButton
                            android:id="@+id/fund_z_trademoney_button"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/trademoney"
                            android:textColor="#850" 
                            android:checked="true" 
		           			android:button="@null"
		            		android:drawableRight="@drawable/sort_radio_button"/>

                        <RadioButton
                            android:id="@+id/fund_z_discount_button"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/discount"
                            android:textColor="#850" 
                            android:checked="true" 
		           			android:button="@null"
		            		android:drawableRight="@drawable/sort_radio_button"/>

                       
                    </RadioGroup>

		     
		    </LinearLayout>

		    <ImageView
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:background="#000000" />
		</LinearLayout>
    <ListView
        android:id="@+id/self_choose_list"
        android:layout_width="match_parent"
        android:layout_height="0dp" 
        android:layout_weight="1">
        
    </ListView>

</LinearLayout>
